--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
     "webpack-hot-middleware": "^2.26.1"
   },
   "dependencies": {
+    "aws-sdk": "^2.842.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-session": "^2.1.0",
@@ -56,6 +57,8 @@
     "express-handlebars": "^5.2.0",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "objection": "^3.1.3",
     "objection-unique": "^1.2.2",
     "passport": "^0.5.0",
