--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@googlemaps/js-api-loader": "^1.15.1",
     "react-fontawesome": "^1.7.1",
     "html-webpack-plugin": "^5.2.0",
     "jquery": "^3.6.0",
