--- a/server/package.json
+++ b/server/package.json
@@ -55,6 +55,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "express-handlebars": "^5.2.0",
+    "got": "^11.8.0",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
