--- a/server/package.json
+++ b/server/package.json
@@ -56,10 +56,12 @@
     "express": "^4.18.2",
     "express-handlebars": "^5.2.0",
     "got": "^11.8.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "nodemailer": "^6.9.13",
     "objection": "^3.1.3",
     "objection-unique": "^1.2.2",
     "passport": "^0.5.0",
